2007-07-17 HLT base
	- extended high-level component interface in order to allow header
	  buffer before TObjects
	- ROOT memory file added
	- ROOT file streamer added
	- workaround for ROOT garbage collection causing crashes when
	  cleaning up input objects
	
2007-05-09 version HLT-v0-6 tagged
	Highlights
	BASE libHLTbase version 3.1.0
	- High level component interface implemeted
	- framework for AliRoot reconstruction added
	- HLT logging converted to AliLog, AliLog trap added in order to
	  be able to redirect messages written to AliLog
	- module agents for HLT libraries imlemented
	- all utility components now moved from HLTbase to AliHLTUtil
	TPC libAliHLTTPC version 3.1.1
	- DigitReaderPacked revived
	- merger added to slice tracker
	- improvements on the ESD conversion
	TRD
	- first version of components using offline reconstruction added
	PHOS
	- 
2007-04-27 HLT base
	- memory leaks corrected
	- AliLog support moved to libAliHLTUtil in order to keep
	- libHLTbase free of AliRoot dependencies
	- dynamic loading of AliLog support
	- AliHLTFileWriter moved to libAliHLTUtil
	- workaround for ROOT bug: in order to avoid crashes when unloading 
	  dynamic libraries via gSystem, the libraries are not unloaded
	  further investigation necessary
2007-04-17 HLT sample applications
	- publisher for AliLoader trees added
	- sample analysis chain added tp sample lib
	- tutorial and documentation
	- benchmark functionality added to AliHLTSystem
2007-03-14 aliroot integration
	- AliHLTSystem interface methods to AliHLTReconstructor implemeted
	- AliHLTModuleAgent introduced for each HLT module, sample
	  agent added to libAliHLTSample
	- AliHLTOfflineInterface base classes added
	- AliHLTFilePublisher, AliHLTRootFileWriter/Publisher moved to 
	  libAliHLTUtil (AliHLTFileWriter will follow when dep. to PHOS are
	  cleared)
2007-03-09 logging system
	- adapted to AliRoot logging system, messages printed out via AliRoot
	  message channel